--- a/style.css
+++ b/style.css
@@ -1,10 +1,83 @@
+.other
+{
+    text-align: center;
+    text-justify: inter-word;
+}
+
+form {
+    /* Uniquement centrer le formulaire sur la page */
+    margin: 0 auto;
+    width: 400px;
+    /* Encadré pour voir les limites du formulaire */
+    padding: 1em;
+    border: 1px solid #CCC;
+    border-radius: 1em;
+  }
+  
+  form div + div {
+    margin-top: 1em;
+  }
+  
+  label {
+    /* Pour être sûrs que toutes les étiquettes ont même taille et sont correctement alignées */
+    display: inline-block;
+    width: 90px;
+    text-align: right;
+  }
+  
+  input, textarea {
+    /* Pour s'assurer que tous les champs texte ont la même police.
+       Par défaut, les textarea ont une police monospace */
+    font: 1em sans-serif;
+  
+    /* Pour que tous les champs texte aient la même dimension */
+    width: 300px;
+    box-sizing: border-box;
+  
+    /* Pour harmoniser le look & feel des bordures des champs texte */
+    border: 1px solid #999;
+  }
+  
+  input:focus, textarea:focus {
+    /* Pour souligner légèrement les éléments actifs */
+    border-color: #000;
+  }
+  
+  textarea {
+    /* Pour aligner les champs texte multi‑ligne avec leur étiquette */
+    vertical-align: top;
+  
+    /* Pour donner assez de place pour écrire du texte */
+    height: 5em;
+  }
+  
+  .button {
+    /* Pour placer le bouton à la même position que les champs texte */
+    padding-left: 90px; /* même taille que les étiquettes */
+  }
+  
+  button {
+    /* Cette marge supplémentaire représente grosso modo le même espace que celui
+       entre les étiquettes et les champs texte */
+    margin-left: .5em;
+  }
+
+  .Other
+  {
+    text-align: center;
+    font-family: "fantasy";
+  }
+
+
+/**************************************************/
+
 body
 {
   /*background-color:white;*/
-  font-family : "Snell Roundhand", cursive;
+  font-family : "fantasy";
   background: url('./img/fond.webp');
   background-repeat:no-repeat;
-  background-size: 100%;
+  background-size: 120%;
 }
 
 
@@ -25,10 +98,10 @@ footer{
 #nav
 {
     font-size: 30px;
-    color : blue;
     padding : 0;
     margin : 0;
     text-align: center;
+    
     
 }
 #nav li
@@ -73,8 +146,7 @@ h1:hover
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     grid-auto-rows: 200px;
-    /*background-color: white;*/
-    background-image:url('./img/daVinciCloud.svg');
+    background-image:url('./img/daVinciCloud-gris.png');
     
     background-color: white;
     height: 1100px;
@@ -82,8 +154,12 @@ h1:hover
     margin-right: 10%;
     background-repeat: no-repeat;
     background-position: center;
-    /*opacity: 90%;*/
 
+}
+
+.next
+{
+  height: 15px;
 }
 
 .Etudiants{
@@ -113,7 +189,7 @@ h1:hover
   text-indent: 25px;
   height: auto;
   padding: 10px;
-  text-transform: capitalize;
+  
 }
 
 .Solutions .lines {
@@ -140,11 +216,11 @@ h1:hover
 }
 
 
-.postit {
+#postit {
   line-height: 1;
   text-align:center;     
   width: 275px;    
-  margin-left: 150px;    
+  margin-left: 30px;    
   min-height:250px;
   max-height:250px;
   padding-top:25px;
@@ -163,7 +239,7 @@ background: -o-linear-gradient(-45deg, #ffff88 81%,#ffff88 82%,#ffff88 82%,#ffff
 background: -ms-linear-gradient(-45deg, #ffff88 81%,#ffff88 82%,#ffff88 82%,#ffffc6 100%); /* IE10+ */
 background: linear-gradient(135deg, #ffff88 81%,#ffff88 82%,#ffff88 82%,#ffffc6 100%); /* W3C */
 filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffff88', endColorstr='#ffffc6',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
-padding: 30px;
+padding: 35px;
 
 }
  
@@ -188,13 +264,14 @@ padding: 30px;
   -webkit-border-radius:50px;
   -moz-border-radius:50px;
   border-radius:50px;
-  width:150px;
-  height:150px;
+  width:160px;
+  height: 200px;
   float: left;
+  margin-left: 75px;
 }
 
 .ImgEtudiant{
-  padding: 25px;
+  padding: 15px;
 }
 
 #containerMessage
@@ -289,3 +366,4 @@ padding: 30px;
   top:50px;
   left:1350px;
 }
+
