--- a/stylelesservices.css
+++ b/stylelesservices.css
@@ -1,12 +1,15 @@
 body
 {
-  /*background-color:white;*/
-  font-family : "Snell Roundhand", cursive;
+  font-family : "fantasy";
   background: url('./img/fond.webp');
   background-repeat:no-repeat;
-  background-size: 100%;
+  background-size: 120%;
+  
 }
 
+.debut{
+  background-color: white;
+}
 
 header{
   background-color: white;
@@ -21,11 +24,9 @@ footer{
   margin-left: 10%;
   margin-right: 10%;
 }
-
 #nav
 {
     font-size: 30px;
-    color : blue;
     padding : 0;
     margin : 0;
     text-align: center;
@@ -69,21 +70,24 @@ h1:hover
 }
 
 #corpsText{
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-auto-rows: 200px;
-    /*background-color: white;*/
-    background-image:url('./img/daVinciCloud.svg');
+  display: grid; 
+  grid-template-columns: repeat(1, 1fr); 
+  grid-auto-rows: 100px; 
+    background-image:url('./img/daVinciCloud-gris.png');
     
     background-color: white;
     height: 1100px;
     margin-left: 10%;
     margin-right: 10%;
+    padding: 35px;
     background-repeat: no-repeat;
     background-position: center;
-    /*opacity: 90%;*/
-
 }
+
+
+
+
+
 #JC{
     padding: 25px;
     overflow:hidden;
@@ -124,17 +128,18 @@ h1:hover
 .popup .popuptext {
   visibility: hidden;
   width: 200px;
-  height: 25px;
-  background-color: #555;
-  color: #fff;
+  height: 200px;
+  background-color: #fff;
+  color: #000;
   text-align: center;
   border-radius: 6px;
   padding: 8px 0;
   position: absolute;
   z-index: 1;
-  bottom: 125%;
+  top : 50%;
   left: 50%;
   margin-left: -80px;
+  overflow:auto;
 }
 
 /* Popup arrow */
@@ -154,7 +159,7 @@ h1:hover
   visibility: visible;
   -webkit-animation: fadeIn 1s;
   animation: fadeIn 1s;
-  position : absolute;
+  position : fixed;
   top:50px;
   left:1458px;
 }
@@ -170,6 +175,35 @@ h1:hover
   to {opacity:1 ;}
 }
 
-body h2{
+#titre{
   text-align: center;  
 }
+
+h2{
+  text-decoration: underline;
+}
+
+#corpsText a{
+    display: block;
+    background-color: #DED6D4;
+    width: 195px;
+    text-align: center;
+    border-radius: 5px;
+
+}
+
+#corpsText a:hover{
+  box-shadow: -1px 2px 5px 1px rgba(0, 0, 0, 0.7);
+}
+
+
+#corpsText p{
+  margin-left: 50px;
+}
+
+.Services{
+  margin-left: 50px;
+  
+
+}
+
